<resources>
    <string name="app_name">Introducemyself</string>
    <string name="btn_home_finish_text">종료</string>
    <string name="tv_signup_name_text">이름</string>
    <string name="edit_signup_name_hint">이름을 입력하세요.</string>
    <string name="tv_id_text">아이디</string>
    <string name="edit_id_hint">아이디를 입력하세요.</string>
    <string name="tv_password_text">비밀번호</string>
    <string name="edit_password_hint">비밀번호를 입력하세요.</string>
    <string name="btn_signup_check_text">회원가입</string>
    <string name="btn_signin_login_text">로그인</string>
    <string name="btn_signin_signup_text">회원가입</string>
    <string name="btn_signup_error_text">입력되지 않은 정보가 있습니다.</string>
    <string name="btn_login_error_text1">아이디/비밀번호를 확인해주세요</string>
    <string name="btn_login_error_text2">틀린 아이디 또는 비밀번호입니다.</string>
    <string name="btn_login_success_text">로그인 성공</string>
</resources>